2008-02-29  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Wildcard in directory-components in Files breaks
	system(install)

2008-02-17  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.5.2

2008-02-06  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: undef is possible return from package_from_pkgconfig

2008-01-14  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Better toleration of whitespace in .info Shlibs field

2008-01-12  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: rarian-compat is new version of scrollkeeper in pangocairo

2008-01-02  Daniel Macks  <dmacks@netspace.org>

	* CheckSum/*.pm, Finally/*.pm, Notify/*.pm, SelfUpdate/*.pm, Text/*.pm, version/*.pm, *.pm, FinkVersion.pm.in: updated Copyright notice

2007-12-18  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Complain if a .la contains -framework not in -Wl,

2007-11-24  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Tell user if overriding the DownloadMethod pref.

2007-11-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: If cleanup-obsoletes removes all obsolete packages,
	also remove the fink-obsolete-packages package

2007-12-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add support for .pc file virtuals, force x11
	release version based on existence of certain .pc virtuals

2007-11-27  Alexander Hansen <akh@finkproject.org>

	* Bootstrap.pm: recognize 10.5.1 and 10.4.11 .

2007-11-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Add note to "fink info" for BDO packages.

2007-11-05  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm: skip the gcc_select check since
	  readlink("/usr/bin/gcc") should be just as correct, and faster

2007-11-01  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: improved message about the state of fink on leopard
	* PkgVersion.pm: improved message to users when a build fails

2007-10-27  Benjamin Reed  <rangerrick@users.sourceforge.net>
