@@ -1,3 +1,7 @@
+2008-03-02  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Don't create blank shlibs files in .deb
+
 2008-02-29  Daniel Macks  <dmacks@netspace.org>
 
 	* Validation.pm: Wildcard in directory-components in Files breaks
